// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal should display send modal form 1`] = `
<actionmodal-stub
  denom="STAKE"
  id="send-modal"
  notifymessage="[object Object]"
  passtoparent="function () { [native code] }"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value=""
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <tmfield-stub
      class="tm-field"
      id="amount"
      placeholder="Amount"
      type="number"
    />
     
    <tmformmsg-stub
      msg="doesn't have any s"
      name="Wallet"
      type="custom"
    />
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    size="sm"
    to=""
    type="link"
    value="Edit Memo"
  />
   
  <!---->
</actionmodal-stub>
`;

exports[`SendModal validation should show address required error 1`] = `
<actionmodal-stub
  amount="2"
  denom="STAKE"
  id="send-modal"
  notifymessage="[object Object]"
  passtoparent="function () { [native code] }"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <tmfield-stub
      class="tm-field"
      id="amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    size="sm"
    to=""
    type="link"
    value="Edit Memo"
  />
   
  <!---->
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too long 1`] = `
<actionmodal-stub
  amount="2"
  denom="STAKE"
  id="send-modal"
  notifymessage="[object Object]"
  passtoparent="function () { [native code] }"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <tmfield-stub
      class="tm-field"
      id="amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    size="sm"
    to=""
    type="link"
    value="Edit Memo"
  />
   
  <!---->
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too short 1`] = `
<actionmodal-stub
  amount="2"
  denom="STAKE"
  id="send-modal"
  notifymessage="[object Object]"
  passtoparent="function () { [native code] }"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <tmfield-stub
      class="tm-field"
      id="amount"
      placeholder="Amount"
      type="number"
      value="2"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    size="sm"
    to=""
    type="link"
    value="Edit Memo"
  />
   
  <!---->
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when alphanumeric is wrong 1`] = `
<actionmodal-stub
  denom="STAKE"
  id="send-modal"
  notifymessage="[object Object]"
  passtoparent="function () { [native code] }"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Denomination"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <tmfield-stub
      class="tm-field"
      id="amount"
      placeholder="Amount"
      type="number"
    />
     
    <tmformmsg-stub
      msg="doesn't have any s"
      name="Wallet"
      type="custom"
    />
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    size="sm"
    to=""
    type="link"
    value="Edit Memo"
  />
   
  <!---->
</actionmodal-stub>
`;
